--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@endemolshinegroup/generator-nodejs-ts",
-  "description": "A node-js project generator using Typescript",
+  "description": "A Yeoman project generator for Typescript projects",
   "version": "1.0.2",
   "license": "MIT",
   "main": "dist/index.js",
