--- a/src/app/templates/_codeclimate.yml
+++ b/src/app/templates/_codeclimate.yml
@@ -5,7 +5,7 @@ plugins:
     enabled: true
 
 exclude_patterns:
-  - ".github/"                                      # Exclude GitHub issue templates
+  - "_github/"                                      # Exclude GitHub issue templates
   - "scripts/"                                      # Exclude project build scripts
   - "CHANGELOG.md"                                  # Exclude automatically generated CHANGELOG.md
   - "**/dist/"
