--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     ],
     "module": "commonjs",
     "outDir": "generators/",
+    "rootDir": "src",
     "sourceMap": true,
     "strict": true,
     "target":"ES2018"
