ci(release): change Git commands to push release commit back to develop

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,5 +49,5 @@ jobs:
         - git clone https://${GH_TOKEN}@github.com/$TRAVIS_REPO_SLUG.git $TRAVIS_REPO_SLUG
         - cd $TRAVIS_REPO_SLUG
         - git fetch --all
-        - git merge origin master
+        - git merge origin/master
         - git push
