fix(travis): change Git commands to push release commit back to develop

--- a/src/app/templates/_travis.yml
+++ b/src/app/templates/_travis.yml
@@ -46,7 +46,6 @@ jobs:
         - yarn semantic-release
         - git clone https://${GH_TOKEN}@github.com/$TRAVIS_REPO_SLUG.git $TRAVIS_REPO_SLUG
         - cd $TRAVIS_REPO_SLUG
-        - git fetch
-        - git checkout develop
-        - git merge origin master
+        - git fetch --all
+        - git merge origin/master
         - git push
