--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
+    "@types/nodegit": "^0.22.3",
+    "nodegit": "^0.22.2",
     "yeoman-generator": "^3.1.1"
   },
   "devDependencies": {
