--- a/src/app/templates/package.json
+++ b/src/app/templates/package.json
@@ -36,6 +36,8 @@
     "@commitlint/cli": "^7",
     "@commitlint/config-conventional": "^7",
     "@commitlint/prompt": "^7",
+    "@endemolshinegroup/prettier-config": "^1",
+    "@endemolshinegroup/tslint-config": "^1",
     "@semantic-release/changelog": "^3",
     "@semantic-release/git": "^7",
     "@types/jest": "^23",
@@ -49,8 +51,8 @@
     "semantic-release": "^15",
     "ts-jest": "^23.10.0-beta.1",
     "tslint": "^5",
-    "tslint-config-esg": "github:EndemolShineGroup/tslint-config-esg",
     "tslint-config-prettier": "^1",
+    "tslint-eslint-rules": "^5",
     "typedoc": "^0.12.0",
     "typescript": "^3"
   }<%_ if(isPublic) { _%>,
