--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:watch": "tsc --watch",
     "lint": "tslint -p tsconfig.json -t codeFrame 'src/**/*.ts' -e 'src/**/*.spec.ts'",
     "pretest": "rimraf coverage/",
-    "test": "jest --no-cache --verbose",
+    "test": "jest --no-cache",
     "semantic-release": "semantic-release"
   },
   "dependencies": {
@@ -41,6 +41,8 @@
     "@commitlint/cli": "^7",
     "@commitlint/config-conventional": "^7",
     "@commitlint/prompt": "^7",
+    "@endemolshinegroup/prettier-config": "^1",
+    "@endemolshinegroup/tslint-config": "^1",
     "@semantic-release/changelog": "^3",
     "@semantic-release/git": "^7",
     "@types/jest": "^23",
@@ -57,8 +59,8 @@
     "semantic-release": "^15",
     "ts-jest": "^23.10.0-beta.1",
     "tslint": "^5",
-    "tslint-config-esg": "github:EndemolShineGroup/tslint-config-esg",
     "tslint-config-prettier": "^1",
+    "tslint-eslint-rules": "^5",
     "typedoc": "^0.12.0",
     "typescript": "^3",
     "yeoman-assert": "^3.1.1",
