--- a/src/app/templates/package.json
+++ b/src/app/templates/package.json
@@ -49,7 +49,7 @@
     "prettier": "^1",
     "rimraf": "^2",
     "semantic-release": "^15",
-    "ts-jest": "^23.10.0-beta.1",
+    "ts-jest": "^23",
     "tslint": "^5",
     "tslint-config-prettier": "^1",
     "tslint-eslint-rules": "^5",
