fix(templating): use scoped jira smart commit

--- a/src/app/templates/package.json
+++ b/src/app/templates/package.json
@@ -37,6 +37,8 @@
     "@commitlint/config-conventional": "^7",
     <%_ if(isPublic) { _%>
     "@endemolshinegroup/cz-github": "^1",
+    <%_ } else { _%>
+    "@endemolshinegroup/cz-jira-smart-commit": "^3",
     <%_ } _%>
     "@endemolshinegroup/prettier-config": "^1",
     "@endemolshinegroup/tslint-config": "^1",
@@ -45,9 +47,6 @@
     "@types/jest": "^23",
     "@types/node": "^10",
     "commitizen": "^3",
-    <%_ if(!isPublic) { _%>
-    "cz-jira-smart-commit": "^3",
-    <%_ } _%>
     "husky": "^1",
     "jest": "^23",
     "lint-staged": "^7",
