--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "^23",
     "@types/node": "^10",
     "@types/rimraf": "^2.0.2",
+    "@types/uuid": "^3.4.4",
     "@types/yeoman-generator": "^3.0.0",
     "@types/yeoman-test": "^1.7.4",
     "commitizen": "^3.0.2",
@@ -63,6 +64,7 @@
     "tslint-eslint-rules": "^5",
     "typedoc": "^0.13.0",
     "typescript": "^3",
+    "uuid": "^3.3.2",
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^1.9.1"
   },
