--- a/src/app/templates/package.json
+++ b/src/app/templates/package.json
@@ -27,7 +27,7 @@
     "build:watch": "tsc --watch",
     "lint": "tslint -p tsconfig.json -t codeFrame 'src/**/*.ts' -e 'src/**/*.spec.ts'",
     "pretest": "rimraf coverage/",
-    "test": "jest --no-cache",
+    "test": "jest --no-cache --coverage",
     "semantic-release": "semantic-release"
   },
   "dependencies": {
