--- a/src/app/templates/_github/settings.yml
+++ b/src/app/templates/_github/settings.yml
@@ -2,25 +2,39 @@
 
 repository:
 
+  # Either `true` to make the repository private, or `false` to make it public.
   private: <% if(isPublic) { _%>false<%_ } else { _%>true<%_ } %>
 
+  # Either `true` to enable issues for this repository, `false` to disable them.
   has_issues: <% if(isPublic) { _%>true<%_ } else { _%>false<%_ } %>
 
+  # Either `true` to enable projects for this repository, or `false` to disable them.
+  # If projects are disabled for the organization, passing `true` will cause an API error.
   has_projects: false
 
+  # Either `true` to enable the wiki for this repository, `false` to disable it.
   has_wiki: false
 
+  # Either `true` to enable downloads for this repository, `false` to disable them.
   has_downloads: <% if(isPublic) { _%>true<%_ } else { _%>false<%_ } %>
 
+  # Updates the default branch for this repository.
   default_branch: develop
 
+  # Either `true` to allow squash-merging pull requests, or `false` to prevent
+  # squash-merging.
   allow_squash_merge: false
 
+  # Either `true` to allow merging pull requests with a merge commit, or `false`
+  # to prevent merging pull requests with merge commits.
   allow_merge_commit: false
 
+  # Either `true` to allow rebase-merging pull requests, or `false` to prevent
+  # rebase-merging.
   allow_rebase_merge: true
 
 branches:
+  # https://developer.github.com/v3/repos/branches/#update-branch-protection
   - name: master
     protection:
       required_pull_request_reviews:
@@ -32,11 +46,17 @@ branches:
           teams: []
       required_status_checks:
         strict: true
-        contexts: [ <% if(isPublic) { _%>codecov/project, continuous-integration/travis-ci<%_ } else { _%><%_ } %> ]
+        contexts: [ <% if(isPublic) { %>
+          codeclimate,
+          codeclimate/diff-coverage,
+          codecov/project,
+          continuous-integration/travis-ci,<%_ } %>
+        ]
       enforce_admins: true
       restrictions:
         users: [ esg-bot, hassankhan ]
         teams: []
+  # https://developer.github.com/v3/repos/branches/#update-branch-protection
   - name: develop
     protection:
       required_pull_request_reviews:
@@ -48,7 +68,12 @@ branches:
           teams: []
       required_status_checks:
         strict: true
-        contexts: [ <% if(isPublic) { _%>codecov/project, continuous-integration/travis-ci<%_ } else { _%><%_ } %> ]
+        contexts: [ <% if(isPublic) { %>
+          codeclimate,
+          codeclimate/diff-coverage,
+          codecov/project,
+          continuous-integration/travis-ci,<%_ } %>
+        ]
       enforce_admins: true
       restrictions:
         users: [ esg-bot, hassankhan ]
