--- a/src/app/templates/_github/settings.yml
+++ b/src/app/templates/_github/settings.yml
@@ -52,7 +52,7 @@ branches:
           codecov/project,
           continuous-integration/travis-ci,<%_ } %>
         ]
-      enforce_admins: true
+      enforce_admins: false
       restrictions:
         users: [ esg-bot ]
         teams: [ open-source ]
@@ -74,7 +74,7 @@ branches:
           codecov/project,
           continuous-integration/travis-ci,<%_ } %>
         ]
-      enforce_admins: true
+      enforce_admins: false
       restrictions:
         users: [ esg-bot ]
         teams: [ open-source ]
