feat(tslib): add tslib and set required settings in tsconfig.json
Fixes #31

--- a/src/app/templates/tsconfig.json
+++ b/src/app/templates/tsconfig.json
@@ -3,6 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "esModuleInterop": true,
+    "importHelpers": true,
     "lib": [
       "es2015"
     ],
