--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
+    "tslib": "^1.9.3",
     "yeoman-generator": "^3.1.1"
   },
   "devDependencies": {
