--- a/src/app/templates/package.json
+++ b/src/app/templates/package.json
@@ -31,6 +31,7 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^7",
