--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "commit": "git-cz",
     "prebuild": "rimraf generators/",
     "build": "tsc",
-    "postbuild": "mkdir -p generators/app/templates && cp -R src/app/templates generators/app",
+    "postbuild": "scripts/copyTemplates.sh",
     "build:docs": "rimraf docs/api && typedoc --out docs/api --target es6 --theme minimal --mode file src",
     "build:watch": "tsc --watch",
     "lint": "tslint -p tsconfig.json -t codeFrame 'src/**/*.ts' -e 'src/**/*.spec.ts'",
