--- a/src/app/templates/tsconfig.json
+++ b/src/app/templates/tsconfig.json
@@ -12,7 +12,7 @@
     "rootDir": "./src",
     "sourceMap": true,
     "strict": true,
-    "target":"ES2015"
+    "target":"es2015"
   },
   "include": [
     "src/**/*.ts"
