fix(tests): ignore test setup file and enable coverage thresholds

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -11,10 +11,10 @@ exclude_patterns:
   - "**/dist/"
   - "**/node_modules/"
   - "**/tests/"
-  - "**/__fixtures__/"
+  - "src/setupTests.ts"                             # Exclude test setup files
+  - "**/__fixtures__/"                              # Exclude test fixtures
   - "**/vendor/"
   - "**/*.d.ts"
   - "**/*.spec.ts"
   - "**/*.integ.ts"
   - "**/templates/"                                 # Exclude template files for code climate accuracy
-  - "setupTests.ts"                                 # Exclude test setup files
