--- a/src/node/templates/package.json
+++ b/src/node/templates/package.json
@@ -6,7 +6,6 @@
   "license": "MIT",
   <%_ } _%>
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "author": {
     "name": "Endemol Shine Group Technology",
     "url": "https://github.com/EndemolShineGroup"
@@ -21,44 +20,13 @@
     "yarn": ">=1.3.0"
   },
   "scripts": {
-    "commit": "git-cz",
-    "build": "rimraf dist/ && tsc",
-    "build:docs": "rimraf docs/api && typedoc --out docs/api --target es6 --theme minimal --mode file src",
-    "build:watch": "tsc --watch",
-    "lint": "tslint -p tsconfig.json -t codeFrame 'src/**/*.ts' -e 'src/**/*.spec.ts'",
     "pretest": "rimraf coverage/",
-    "test": "jest --no-cache --coverage",
-    "semantic-release": "semantic-release"
+    "test": "jest --no-cache --coverage"
   },
   "dependencies": {
-    "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7",
-    "@commitlint/config-conventional": "^7",
-    <%_ if(isPublic) { _%>
-    "@endemolshinegroup/cz-github": "^1",
-    <%_ } else { _%>
-    "@endemolshinegroup/cz-jira-smart-commit": "^1",
-    <%_ } _%>
-    "@endemolshinegroup/prettier-config": "^1",
-    "@endemolshinegroup/tslint-config": "^1",
-    "@semantic-release/changelog": "^3",
-    "@semantic-release/git": "^7",
-    "@types/jest": "^23",
-    "@types/node": "^10",
-    "commitizen": "^3",
-    "husky": "^1",
     "jest": "^23",
-    "lint-staged": "^7",
-    "prettier": "^1",
-    "rimraf": "^2",
-    "semantic-release": "^15",
-    "ts-jest": "^23",
-    "tslint": "^5",
-    "tslint-config-prettier": "^1",
-    "tslint-eslint-rules": "^5",
-    "typedoc": "^0.13.0",
-    "typescript": "^3"
+    "rimraf": "^2"
   }
 }
