--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     ],
     "module": "commonjs",
     "outDir": "generators/",
+    "resolveJsonModule": true,
     "rootDir": "src",
     "sourceMap": true,
     "strict": true,
