--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@commitlint/cli": "^7",
     "@commitlint/config-conventional": "^7",
     "@endemolshinegroup/cz-github": "^1",
+    "@endemolshinegroup/git-author-check": "^1.0.1",
     "@endemolshinegroup/prettier-config": "^1",
     "@endemolshinegroup/tslint-config": "^1",
     "@semantic-release/changelog": "^3",
