--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/EndemolShineGroup/generator-nodejs-ts.git"
   },
   "engines": {
-    "node": ">=8.0.0",
+    "node": ">=10.0.0",
     "yarn": ">=1.3.0"
   },
   "scripts": {
@@ -48,7 +48,7 @@
     "@semantic-release/changelog": "^3",
     "@semantic-release/git": "^7",
     "@types/jest": "^23.3.7",
-    "@types/node": "^10",
+    "@types/node": "10.*",
     "@types/rimraf": "^2.0.2",
     "@types/uuid": "^3.4.4",
     "@types/yeoman-generator": "^3.0.0",
