--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -47,9 +47,11 @@ branches:
       required_status_checks:
         strict: true
         contexts: [
+          codeclimate,
           codeclimate/diff-coverage,
           codecov/project,
-          continuous-integration/travis-ci,
+          Travis CI - Branch,
+          Travis CI - Pull Request
         ]
       enforce_admins: false
       restrictions:
@@ -68,9 +70,11 @@ branches:
       required_status_checks:
         strict: true
         contexts: [
+          codeclimate,
           codeclimate/diff-coverage,
           codecov/project,
-          continuous-integration/travis-ci,
+          Travis CI - Branch,
+          Travis CI - Pull Request
         ]
       enforce_admins: false
       restrictions:
