--- a/src/node/templates/package.json
+++ b/src/node/templates/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "<%= projectScope %>/<%= projectName %>",
-  "description": "<%= projectDescription %>",
-  "version": "<%= version %>",
-  <%_ if(isPublic) { _%>
-  "license": "MIT",
-  <%_ } _%>
+  "name": "@endemolshinegroup/generated-nodejs-ts",
+  "description": "",
+  "version": "",
+  "license": "",
   "main": "dist/index.js",
+  "types": "",
   "author": {
     "name": "Endemol Shine Group Technology",
     "url": "https://github.com/EndemolShineGroup"
   },
-  "homepage": "https://github.com/EndemolShineGroup/<%= projectName %>",
+  "homepage": "https://github.com/EndemolShineGroup/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/EndemolShineGroup/<%= projectName %>.git"
+    "url": "https://github.com/EndemolShineGroup/.git"
   },
   "engines": {
     "node": ">=8.0.0",
@@ -26,7 +25,5 @@
   "dependencies": {
   },
   "devDependencies": {
-    "jest": "^23",
-    "rimraf": "^2"
   }
 }
